crates/carta/tests/snapshots/golden_writer__ipynb__common__link-empty-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "before [](http://example.com) after"
   ],
   "id": "f520834e-c811-4dec-8dd3-ebeaa99a41c0"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
