crates/carta/tests/snapshots/golden_writer__ipynb__common__link-in-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "[outer <a href=\"u2\" id=\"iid\" class=\"ic\">inner</a> end](u1)"
   ],
   "id": "dd1942ee-c400-44d5-bad8-ffd14fa95068"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
