crates/carta/tests/snapshots/golden_writer__ipynb__common__link-url-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "[x](http://example.com/a%20b#frag)"
   ],
   "id": "2528d869-a2bd-4ccb-ba38-4bdff9059d94"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
