crates/carta/tests/snapshots/golden_writer__ipynb__common__list-bullet-in-definition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "term  \n",
    "- alpha\n",
    "- beta"
   ],
   "id": "883939a7-1f06-41ff-97eb-0df83eb4fb9a"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
