crates/carta/tests/snapshots/golden_writer__ipynb__common__list-nested-first-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "- - inner one\n",
    "  - inner two\n",
    "\n",
    "- outer two"
   ],
   "id": "d3be24a8-9b20-465e-93b5-89651a973438"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
