crates/carta/tests/snapshots/golden_writer__ipynb__common__literal-control-chars.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "before x\u0000\u0001\u0007\u001fy after"
   ],
   "id": "457f0aac-3a65-4d34-9c5b-9786fb9d1fa0"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
