crates/carta/tests/snapshots/golden_writer__ipynb__common__nested-emphasis.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "*emph with **strong** inside* end"
   ],
   "id": "a1af2d84-25bd-47eb-bc6c-854a1ec2b4f2"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
