crates/carta/tests/snapshots/golden_writer__ipynb__common__nonascii-escape.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "café résumé naïve"
   ],
   "id": "240f02b9-8474-4c6c-863b-2f33fd5e8d20"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
