crates/carta/tests/snapshots/golden_writer__ipynb__common__ordered-example.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "1.  first\n",
    "2.  second"
   ],
   "id": "17199efc-5405-4fe6-a8ac-e76a4d3a9f98"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
